--- a/pom.xml
+++ b/pom.xml
@@ -11,6 +11,7 @@
 	<properties>
 		<spring.version>4.1.6.RELEASE</spring.version>
 		<hibernate.version>4.3.10.Final</hibernate.version>
+		<jackson.version>2.5.4</jackson.version>
 	</properties>
 
 	<dependencies>
@@ -72,6 +73,12 @@
 			<artifactId>javax.servlet-api</artifactId>
 			<version>3.1.0</version>
 		</dependency>
+		<!-- Jackson -->
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-databind</artifactId>
+            <version>${jackson.version}</version>
+        </dependency>
 	</dependencies>
 	<build>
 		<finalName>SpendingRepository</finalName>
