--- a/src/main/resources/hibernate.properties
+++ b/src/main/resources/hibernate.properties
@@ -1,5 +1,5 @@
 hibernate.connection.driver_class=org.hsqldb.jdbcDriver
-hibernate.connection.url=jdbc:hsqldb:mem:spending
+hibernate.connection.url=jdbc:hsqldb:file:/Users/Marian/Projekty/SpendingRepository/target/spending;hsqldb.lock_file=false
 hibernate.connection.username=SPENDING_DB
 hibernate.connection.password=
 hibernate.dialect=org.hibernate.dialect.HSQLDialect
