--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,8 @@
 		<username>SPENDING_DB</username>
 		<password></password>
 		<spring.version>4.1.6.RELEASE</spring.version>
+		<spring.security.version>4.0.2.RELEASE</spring.security.version>
+		<spring.security.oauth.version>2.0.7.RELEASE</spring.security.oauth.version>
 		<hibernate.version>4.3.10.Final</hibernate.version>
 		<jackson.version>2.6.0</jackson.version>
 		<hsqldb.version>2.3.2</hsqldb.version>
@@ -95,6 +97,26 @@
 			<artifactId>spring-webmvc</artifactId>
 			<version>${spring.version}</version>
 		</dependency>
+        <dependency>
+            <groupId>org.springframework.security</groupId>
+            <artifactId>spring-security-core</artifactId>
+            <version>${spring.security.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.security</groupId>
+            <artifactId>spring-security-config</artifactId>
+            <version>${spring.security.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.security</groupId>
+            <artifactId>spring-security-web</artifactId>
+            <version>${spring.security.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.security.oauth</groupId>
+            <artifactId>spring-security-oauth2</artifactId>
+            <version>${spring.security.oauth.version}</version>
+        </dependency>
 		<dependency>
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-test</artifactId>
